// Generated by https://github.com/foxglove/schemas

syntax = "proto3";

import "foxglove/proto/SceneEntity.proto";
import "foxglove/proto/SceneEntityDeletion.proto";

package foxglove;

// An update to the entities displayed in a 3D scene
message SceneUpdate {
  // Scene entities to delete
  repeated foxglove.SceneEntityDeletion deletions = 1;

  // Scene entities to add or replace
  repeated foxglove.SceneEntity entities = 2;
}
